<resources>
    <string name="app_name">Lab2_Q1_Act1</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="last_name">Last Name:</string>
    <string name="student_number">Student Number:</string>
    <string name="gender">Gender:</string>
    <string name="first_name">First Name:</string>
    <string name="division">Division:</string>
    <string name="i_am_not_a_robot">I am not a robot!</string>
    <string name="submit">Submit</string>
    <string name="logo">logo</string>
    <string name="Summary">TextView</string>
    <string name="fullName">TextView</string>
    <string name="done">Done</string>
    <string-array name="classes">
        <item>COSC</item>
        <item>MATH</item>
        <item>DATA</item>
    </string-array>
</resources>